fix menu button on mobile

--- a/src/Add.module.css
+++ b/src/Add.module.css
@@ -1,4 +1,4 @@
-.add-container {
+.container {
   display: flex;
   flex-direction: column;
   background: lightgray;
@@ -49,12 +49,13 @@
   background-color: gray;
   border-radius: 5px;
   cursor: pointer;
-  padding: 0px 8px;
   margin-left: auto;
+  width: 32px;
+  height: 32px;
 }
 
-input{
+input {
   font-size: large;
   margin-top: 10px;
-    padding: 12px;
+  padding: 12px;
 }
