--- a/src/App.module.css
+++ b/src/App.module.css
@@ -39,11 +39,13 @@
   background-color: lightgreen;
   color: black;
   border-radius: 8px;
-  margin: 6px;
-  padding: 10px;
+  border: solid 1px black;
+  margin: 8px 4px;
+  padding: 6px;
   cursor: pointer;
   margin-left: auto;
-  width: 48px;
+  width: 32px;
+  opacity: 25%;
 }
 
 .disabled {
