--- a/src/Category.module.css
+++ b/src/Category.module.css
@@ -11,7 +11,7 @@
   font-weight: bold;
   font-size: large;
   border-radius: 8px;
-  margin: 20px 10%;
+  margin: 0px 10% 15px;
 }
 
 .topBar {
